--- a/Downloads/vibhu/settings.json
+++ b/Downloads/vibhu/settings.json
@@ -1,1 +1,1 @@
-{"font_size": "12", "app_theme": "adapta", "voice_speed": "217.94871794871796", "music_enabled": true}
+{"font_size": "12", "app_theme": "clearlooks", "voice_speed": "217.94871794871796", "music_enabled": true}
